--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -9,16 +9,15 @@
   .main-nav__list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    width: 450px;
+    width: 449px;
     margin-top: 19px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .main-nav__list {
-    width: 484px;
+    width: 478px;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
   }
 }
