--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,14 +1,5 @@
-/*.page-main__program {
-  margin-bottom: 22px;
-}*/
-
-.page-main__program-type {
-  margin: 0 auto;
-}
-
 .page-main__program-type-wrapper {
   margin-bottom: 28px;
-  padding: 0 20px;
 }
 
 .page-main__wrapper {
@@ -51,6 +42,7 @@
 
 @media (min-width: @tablet-width) {
   .page-main__program-type-wrapper {
+    margin-top: 526px;
     margin-bottom: 45px;
   }
 
@@ -60,7 +52,7 @@
 
   .page-main__wrapper-title {
     border: none;
-    width: 707px;
+    width: 708px;
     padding: 0 30px;
     margin: 0 auto;
   }
