--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -45,7 +45,7 @@
 
 @media (min-width: @tablet-width) {
   .example__wrapper {
-    width: 707px;
+    width: 708px;
     padding: 0 30px;
     margin: 0 auto;
   }
@@ -57,9 +57,9 @@
   }
 
   .example {
-    padding-top: 44px;
-    padding-bottom: 36px;
-    background-image: linear-gradient(@basic-white 59.2%, @background-grey 59.2%);
+    padding-top: 15px;
+    padding-bottom: 72px;
+    background-image: linear-gradient(@basic-white 56%, @background-grey 56%);
   }
 
   .example__container {
@@ -70,7 +70,7 @@
     padding: 0;
     margin: 0;
     font-weight: 400;
-    padding-bottom: 64px;
+    margin-bottom: 64px;
     font-size: 60px;
     line-height: 60px;
   }
@@ -89,6 +89,7 @@
     color: @basic-black;
     text-transform: uppercase;
     padding-top: 65px;
+    margin: 0;
   }
 
   .example__price {
@@ -116,7 +117,6 @@
 @media (min-width: @desktop-width) {
   .example {
     padding: 0;
-    padding-bottom: 30px;
     margin-bottom: 0;
     background-image: linear-gradient(@basic-white 30%, @background-grey 30%);
   }
@@ -143,7 +143,7 @@
     padding: 0;
     margin: 0;
     font-weight: 400;
-    padding-bottom: 149px;
+    margin-bottom: 149px;
     margin-top: 59px;
     font-size: 60px;
     line-height: 60px;
@@ -153,6 +153,7 @@
     width: 436px;
     margin: 0;
     padding: 0;
+    margin-bottom: 12px;
   }
 
   .example__expenses {
