--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -2,6 +2,7 @@
   color: @basic-white;
   font-family: @oswald;
   background-image: url("../img/mobile-index-cat.png");
+  background-size: 100% 302px;
   background-repeat: no-repeat;
   margin-bottom: 22px;
   position: relative;
@@ -12,7 +13,7 @@
     position: absolute;
     z-index: -1;
     width: 100%;
-    height: 302px;
+    height: 63%;
     background-color: green;
   }
 }
@@ -77,7 +78,7 @@
 
   .program__wrapper {
     position: relative;
-    width: 707px;
+    width: 708px;
     padding: 0 30px;
     margin: 0 auto;
   }
@@ -103,16 +104,19 @@
     line-height: 20px;
     margin: 0;
     margin-left: 88px;
-    margin-bottom: 18px;
+    margin-bottom: 49px;
     text-align: left;
   }
 
   .program__image {
-    width: 709px;
+    width: 708px;
     height: 609px;
     display: block;
     margin-left: 9px;
-    margin-bottom: 0;
+    left: 40px;
+    top: 200px;
+    z-index: -1;
+    position: absolute;
   }
 
   .program__link {
@@ -123,10 +127,7 @@
     line-height: 20px;
     padding-top: 17px;
     padding-bottom: 17px;
-    margin-left: 40px;
-    position: absolute;
-    top: 229px;
-    left: 71px;
+    margin-left: 82px;
   }
 }
 
@@ -162,6 +163,7 @@
     text-transform: uppercase;
     font-size: 20px;
     line-height: 20px;
+    width: 290px;
     margin: 0;
     margin-left: 80px;
     margin-bottom: 52px;
@@ -175,11 +177,11 @@
     left: 38%;
     top: -76px;
     position: absolute;
+    z-index: 1;
   }
 
   .program__link {
     display: block;
-    text-align: center;
     width: 224px;
     font-size: 20px;
     line-height: 20px;
