--- a/source/less/blocks/site-menu.less
+++ b/source/less/blocks/site-menu.less
@@ -15,9 +15,12 @@
   .site-menu__item {
     border: none;
     padding: 0;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 5px;
+    padding-bottom: 15px;
+    margin-right: 35px;
+
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
   }
 
   .site-menu__item--active {
@@ -29,7 +32,7 @@
       position: absolute;
       width: 63px;
       height: 3px;
-      left: 6px;
+      left: 1px;
       top: 30px;
       background-color: @basic_green;
     }
@@ -55,9 +58,12 @@
     border: none;
     padding: 0;
     z-index: 1;
-    padding-left: 5px;
-    padding-right: 5px;
     padding-bottom: 5px;
+    margin-right: 34px;
+
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
   }
 
   .site-menu__link {
@@ -77,7 +83,7 @@
       position: absolute;
       width: 68px;
       height: 2px;
-      left: 6px;
+      left: 0;
       top: 35px;
       background-color: @basic-white;
     }
