--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -7,7 +7,8 @@
   justify-content: center;
   padding-top: 22px;
   padding-bottom: 6px;
-  margin-bottom: 30px;
+  margin-top: 0;
+  margin-bottom: 20px;
   border-top: 1px solid @border-dark-grey;
   border-bottom: 1px solid @border-dark-grey;
 }
