--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,5 +1,6 @@
-.page-footer__container {
+.page-footer {
   background-color: @basic_grey;
+  z-index: -1;
 }
 
 .page-footer__wrapper {
@@ -122,10 +123,9 @@
   .page-footer__wrapper {
     width: 1220px;
     padding: 0 110px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 15px;
     margin: 0 auto;
+    padding-top: 82px;
+    padding-bottom: 50px;
     display: flex;
     justify-content: space-between;
   }
