--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -80,8 +80,8 @@
 @media (min-width: @tablet-width) {
   .page-header {
     display: grid;
-    grid-template-columns: 1fr min-content;
-    grid-column-gap: 94px;
+    grid-template-columns: 202px min-content;
+    grid-column-gap: 66px;
     margin: 0 auto;
     padding: 0 30px;
     padding-top: 25px;
