--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -81,8 +81,19 @@
     width: 708px;
     padding: 0 30px;
     margin: 0 auto;
+    padding-bottom: 526px;
   }
 
+  .program__image {
+    width: 708px;
+    height: 609px;
+    display: block;
+    margin-left: 9px;
+    left: 50px;
+    bottom: 0;
+    z-index: -1;
+    position: absolute;
+  }
 
   .program__wrapper-title {
     color: @basic-black;
@@ -106,17 +117,6 @@
     margin-left: 88px;
     margin-bottom: 49px;
     text-align: left;
-  }
-
-  .program__image {
-    width: 708px;
-    height: 609px;
-    display: block;
-    margin-left: 9px;
-    left: 40px;
-    top: 200px;
-    z-index: -1;
-    position: absolute;
   }
 
   .program__link {
