--- a/source/less/blocks/result.less
+++ b/source/less/blocks/result.less
@@ -187,7 +187,9 @@
     grid-template-columns: 160px 160px;
     grid-column-gap: 38px;
     margin: 0;
-    margin-bottom: 28px;
+    margin-bottom: 56px;
+    padding-top: 19px;
+    padding-bottom: 0;
   }
 
   .result__wrapper {
