верстка страницы формы

--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -7,7 +7,7 @@
   flex-wrap: wrap;
   justify-content: center;
   padding-top: 30px;
-  padding-bottom: 24px;
+  padding-bottom: 19px;
 }
 
 .address__slogan {
@@ -30,13 +30,17 @@
     background-color: @basic-white;
   }
 
+  .address--form {
+    background-color: @basic_grey;
+  }
+
   .address__wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     width: 625px;
     margin: 0 auto;
-    padding-top: 63px;
+    padding-top: 65px;
     padding-bottom: 55px;
   }
 
