--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -15,3 +15,10 @@
     color: @button-hover-text;
   }
 }
+
+@media (min-width: @tablet-width) {
+  .button {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
