--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -25,4 +25,12 @@
       opacity: 85%;
     }
   }
+
+  .page-body--image {
+    background-image: none;
+
+    &::before {
+      display: none;
+    }
+  }
 }
