--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -13,6 +13,7 @@
 @toogle-border-grey: #CDCDCD;
 @button-hover: #5EAA2F;
 @button-hover-text: rgba(255,255,255,0.3);
+@input-border-grey: #E7E7E7;
 
 @tablet-width: 768px;
 @desktop-width: 1440px;
