--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -8,75 +8,10 @@
   flex-direction: column;
 }
 
-.form__group--grid {
-  width: 280px;
-  margin: 0 auto;
-  margin-bottom: 20px;
-  padding: 0 20px;
-}
-
-.form__wrapper-cat-data {
-  margin-bottom: 20px;
-}
-
-.form__radio-grid {
-  width: 280px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
 .form__group {
   border: none;
   padding: 0;
-}
-
-.form__grid {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
   margin: 0;
-  margin-bottom: 20px;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.form__owner-data {
-  display: flex;
-  flex-wrap: wrap;
-  flex-grow: 1;
-}
-
-.form__input {
-  flex-grow: 1;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  padding-left: 14px;
-  padding-right: 14px;
-}
-
-.form__group--textarea {
-  margin-top: 31px;
-  margin-bottom: 34px;
-}
-
-.form__group--radio {
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-}
-
-.form__program {
-  margin: 0;
-}
-
-.form__label {
-  padding-right: 16px;
-  align-self: center;
-}
-
-.form__label-radio {
-  color: @special-grey;
 }
 
 .form__legend {
@@ -85,28 +20,8 @@
   line-height: 26px;
   padding: 0;
   margin: 0;
-  margin-bottom: 32px;
+  font-weight: normal;
   text-transform: none;
-}
-
-.form__group--line {
-  position: relative;
-  padding: 0;
-  margin: 0;
-}
-
-.form__group--line::after {
-  content: "";
-  position: absolute;
-  width: 40%;
-  top: 15px;
-  right: 0;
-  height: 3px;
-  background-color: @basic_green;
-}
-
-.form__label-checkbox {
-  color: @basic-black;
 }
 
 .form input {
@@ -116,21 +31,252 @@
   }
 }
 
-.form__textarea-comment {
-  min-width: 275px;
-  max-width: 275px;
-  text-transform: uppercase;
-  color: @special-dark-grey;
+
+.form__group--grid {
+  width: 280px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  padding: 0 20px;
+}
+
+.form__grid {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0;
+  margin-bottom: 15px;
+
+  &:last-child {
+    margin-bottom: 3px;
+  }
+}
+
+.form__input {
+  flex-grow: 1;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 13px;
+  padding-right: 5px;
+  border: solid 1px @input-border-grey;
+}
+
+.form__label {
+  padding-right: 14px;
+  align-self: center;
+  cursor: pointer;
+  display: block;
+}
+
+.form__wrapper-cat-data {
+  margin-bottom: 20px;
+}
+
+.form__group--radio {
+  border-top: 1px solid @border-dark-grey;
+  border-bottom: 1px solid @border-dark-grey;
+  padding-top: 28px;
+  margin-bottom: 6px;
+}
+
+.form__label-radio {
+  color: @special-grey;
+  padding-left: 45px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+
+.form__radio-grid {
+  width: 280px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.form__program {
+  margin: 0;
+  margin-bottom: 25px;
+}
+
+.form__input-radio + .form__label-radio {
+  position: relative;
+
+  &::before {
+    content: "";
+    width: 28px;
+    height: 28px;
+    border: 1px solid @toogle-border-grey;
+    border-radius: 50%;
+    left: 0;
+    bottom: 3px;
+    position: absolute;
+    display: block;
+  }
+}
+
+.form__input-radio:checked + .form__label-radio {
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    left: 8px;
+    bottom: 10px;
+    background-color: @basic_green;
+  }
+}
+
+.form__group--cat-owner {
+  position: relative;
+  margin-bottom: 8px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 31%;
+    top: 16px;
+    right: 0;
+    height: 2px;
+    background-color: @basic_green;
+  }
+}
+
+.form__legend--cat-owner {
+  margin-bottom: 35px;
+}
+
+.form__owner-data {
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+
+.form__input--email {
+  background-image: url("../img/icon_email.png");
+  background-repeat: no-repeat;
+  background-position: 93% 52%;
+}
+
+.form__input--tel {
+  background-image: url("../img/phone.png");
+  background-repeat: no-repeat;
+  background-position: 93% 50%;
+}
+
+.form__input--owner {
+  border: 1px solid @toogle-border-grey;
+}
+
+.form__label--owner {
+  align-self: flex-start;
+  padding-top: 9px;
+}
+
+.form__group--textarea {
+  position: relative;
+  margin-bottom: 23px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 49.4%;
+    top: 15px;
+    right: 0;
+    height: 2px;
+    background-color: @basic_green;
+  }
 }
 
 .form__legend--textarea {
+  margin-bottom: 8px;
   padding: 0;
   padding-bottom: 30px;
+}
+
+.form__textarea-comment {
+  min-width: 251px;
+  max-width: 251px;
+  height: 137px;
+  padding-left: 14px;
+  padding-right: 13px;
+  padding-top: 9px;
+  text-transform: uppercase;
+  color: @special-dark-grey;
+  border: 1px solid @input-border-grey;
+}
+
+.form__group--checkbox {
+  margin-bottom: 41px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 42%;
+    top: 15px;
+    right: 0;
+    height: 2px;
+    background-color: @basic_green;
+  }
+}
+
+.form__legend--checkbox {
+  margin-bottom: 38px;
+}
+
+.form__checkbox-greed {
+  margin-bottom: 25px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.form__label-checkbox {
+  padding-left: 46px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  color: @basic-black;
+}
+
+
+.form__checkbox + .form__label-checkbox {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 28px;
+    height: 28px;
+    left: 0;
+    top: 1px;
+    border: 1px solid @toogle-border-grey;
+  }
+}
+
+.form__checkbox:checked + .form__label-checkbox {
+  position: relative;
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 18px;
+    height: 14px;
+    left: 6px;
+    bottom: 6px;
+    background-image: url("../img/vector.png");
+  }
 }
 
 .form__container-small {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 36px;
 }
 
 .form__small {
@@ -139,7 +285,8 @@
   color: @basic-black;
   line-height: 16px;
   padding-top: 21px;
-  margin: 0 auto;
+  margin-left: 64px;
+  font-size: 14px;
 }
 
 
@@ -151,87 +298,277 @@
 }
 
 @media (min-width: @tablet-width) {
-  .container {
-    width: 630px;
-    padding-right: 61px;
-    padding-left: 71px;
+  .form {
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 36px;
   }
 
-  .form {
-    display: block;
+  .form__label {
+    margin-right: 5px;
+  }
+
+  .form__legend {
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  .form__group {
+    border: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .form__group--grid {
+    width: 707px;
+    padding: 0 30px;
+    margin: 0 auto;
+    margin-bottom: 69px;
+  }
+
+  .form__grid {
+    width: 630px;
+    margin-left: 40px;
+    margin-bottom: 20px;
+  }
+
+  .form__input {
+    padding-top: 14px;
+    padding-bottom: 14px;
+    padding-left: 20px;
   }
 
   .form__group--radio {
-    margin: 0 auto;
-    padding-right: 61px;
-    padding-left: 71px;
     border: none;
+    padding: 0 30px;
+    width: 707px;
+    margin: 0 auto;
+    margin-bottom: 55px;
   }
 
 
   .form__radio-grid {
-    width: 630px;
-    padding: 0;
-    border: 1px solid black;
+    width: 586px;
+    padding-top: 29px;
+    padding-bottom: 7px;
+    border: 1px solid @input-border-grey;
   }
 
-  .form__group--grid {
-    width: 630px;
-    padding-right: 61px;
-    padding-left: 71px;
+  .form__program {
+    margin-bottom: 23px;
   }
 
-  .form__group--line::after {
-    content: "";
-    position: absolute;
-    width: 40%;
-    top: 15px;
-    right: 0;
-    height: 3px;
-    background-color: @basic_green;
+  .form__label-radio {
+    padding-left: 66px;
   }
 
-  .form__group--line::before {
-    content: "";
-    position: absolute;
-    width: 5%;
-    top: 15px;
-    left: 0;
-    height: 3px;
-    background-color: @basic_green;
+  .form__input-radio + .form__label-radio {
+    position: relative;
+
+    &::before {
+      content: "";
+      width: 40px;
+      height: 40px;
+      border: 1px solid @toogle-border-grey;
+      border-radius: 50%;
+      left: 7px;
+      bottom: -1px;
+      position: absolute;
+      display: block;
+    }
+  }
+
+  .form__input-radio:checked + .form__label-radio {
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
+      left: 19px;
+      bottom: 11px;
+      background-color: @basic_green;
+    }
+  }
+
+  .form__group--cat-owner {
+    margin-bottom: 44px;
+    position: relative;
+    z-index: -1;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      top: 22px;
+      right: 0;
+      height: 2px;
+      background-color: @basic_green;
+      z-index: -1;
+    }
+  }
+
+  .form__legend--cat-owner {
+    width: 553px;
+    margin-left: 40px;
+    margin-bottom: 76px;
+    z-index: 1;
+    background-color: white;
+  }
+
+  .form__input--email {
+    background-image: url("../img/icon_email.png");
+    background-repeat: no-repeat;
+    background-position: 97% 50%;
+  }
+
+  .form__input--tel {
+    background-image: url("../img/phone.png");
+    background-repeat: no-repeat;
+    background-position: 97% 50%;
+  }
+
+  .form__owner-data {
+    margin-left: 41px;
+    width: 631px;
+  }
+
+  .form__label--owner {
+    padding-right: 15px;
+  }
+
+  .form__group--textarea {
+    position: relative;
+    margin-bottom: 59px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      top: 22px;
+      right: 0;
+      height: 2px;
+      background-color: @basic_green;
+      z-index: -1;
+    }
+  }
+
+  .form__legend--textarea {
+    width: 219px;
+    margin-left: 40px;
+    margin-bottom: 46px;
+    background-color: white;
   }
 
   .form__textarea-comment {
-    height: 200px;
-    min-width: 624px;
-    max-width: 624px;
+    height: 158px;
+    min-width: 598px;
+    max-width: 598px;
+    padding-top: 12px;
+    padding-left: 18px;
+    margin-left: 40px;
   }
 
-  .form__checkbox-greed {
-    width: 219px;
+  .form__group--checkbox {
+    position: relative;
+    margin-bottom: 17px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      top: 22px;
+      right: 0;
+      height: 2px;
+      background-color: @basic_green;
+      z-index: -1;
+    }
+  }
+
+  .form__legend--checkbox {
+    margin-left: 40px;
+    margin-bottom: 63px;
+    background: white;
+    width: 252px;
+  }
+
+  .form__label-checkbox {
+    padding-left: 99px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+  }
+
+  .form__checkbox + .form__label-checkbox {
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 38px;
+      height: 38px;
+      left: 40px;
+      top: 1px;
+      border: 1px solid @toogle-border-grey;
+    }
+  }
+
+  .form__checkbox:checked + .form__label-checkbox {
+    position: relative;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 18px;
+      height: 14px;
+      left: 51px;
+      bottom: 14px;
+      background-image: url("../img/vector.png");
+    }
   }
 
   .form__checkbox-wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 44px;
+    grid-template-columns: min-content min-content;
+    text-align: left;
+  }
+
+  .form__checkbox-greed {
+    width: 300px;
+    margin: 0;
+    margin-bottom: 42px;
   }
 
   .form__submit {
     display: block;
-    width: 280px;
+    width: 282px;
     border: none;
     height: 40px;
+    padding-top: 26px;
+    padding-bottom: 26px;
+    font-size: 20px;
+    line-height: 0px;
+    margin-left: 41px;
   }
 
   .form__container-small {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: min-content min-content;
   }
 
   .form__small {
+    margin-top: 15px;
     display: block;
     padding: 0;
+    width: 180px;
     padding-top: 0;
+    font-size: 16px;
+    line-height: 16px;
   }
 }
 
@@ -244,8 +581,15 @@
   .form__wrapper-cat-data {
     width: 1220px;
     margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: min-content min-content;
+    grid-column-gap: 80px;
+    margin-bottom: 49px;
+  }
+
+  .form__grid {
+    margin-left: 0;
+    width: 570px;
   }
 
   .form__group--grid {
@@ -255,24 +599,41 @@
     margin-bottom: 20px;
   }
 
-  .form__group--line::after {
-    content: "";
-    position: absolute;
-    width: 60%;
-    top: 15px;
-    right: 0;
-    height: 3px;
-    background-color: @basic_green;
+  .form__radio-grid {
+    width: 527px;
+    margin: 0;
   }
 
-  .form__group--line::before {
-    content: "";
-    position: absolute;
-    width: 5%;
-    top: 15px;
-    left: 0;
-    height: 3px;
-    background-color: @basic_green;
+  .form__input-radio + .form__label-radio {
+    position: relative;
+
+    &::before {
+      content: "";
+      width: 40px;
+      height: 40px;
+      border: 1px solid @toogle-border-grey;
+      border-radius: 50%;
+      left: 6px;
+      bottom: -3px;
+      position: absolute;
+      display: block;
+    }
+  }
+
+  .form__input-radio:checked + .form__label-radio {
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
+      left: 18px;
+      bottom: 10px;
+      background-color: @basic_green;
+    }
   }
 
 
@@ -280,13 +641,18 @@
     margin: 0;
   }
 
-  .form__radio-grid {
-    width: 570px;
-  }
-
   .form__group--radio {
     padding: 0;
     margin: 0;
+  }
+
+  .form__group--cat-owner {
+    margin-bottom: 47px;
+  }
+
+  .form__legend--cat-owner {
+    margin-left: 0;
+    margin-bottom: 55px;
   }
 
   .form__owner-wrapper {
@@ -300,21 +666,90 @@
     display: flex;
     flex-wrap: wrap;
     width: 569px;
+    margin-left: 0;
+  }
+
+  .form__group--textarea {
+    margin-bottom: 62px;
+  }
+
+  .form__legend--textarea {
+    margin-left: 0;
   }
 
   .form__textarea-comment {
-    max-width: 1214px;
-    min-width: 1214px;
+    max-width: 1187px;
+    min-width: 1187px;
+    margin-left: 0;
+  }
+
+  .form__group--checkbox {
+    margin-bottom: 23px;
   }
 
   .form__checkbox-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-column-gap: 80px;
+  }
+
+  .form__label-checkbox {
+    padding: 0;
+    padding-left: 60px;
+  }
+
+  .form__checkbox-greed {
+    width: auto;
+  }
+
+  .form__legend--checkbox {
+    margin-left: 0;
+  }
+
+  .form__checkbox + .form__label-checkbox {
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 38px;
+      height: 38px;
+      left: 0;
+      top: -6px;
+      border: 1px solid @toogle-border-grey;
+    }
+  }
+
+  .form__checkbox:checked + .form__label-checkbox {
+    position: relative;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 18px;
+      height: 14px;
+      left: 11px;
+      bottom: 9px;
+      background-image: url("../img/vector.png");
+    }
   }
 
   .form__submit {
-    width: 568px;
-    padding: 0;
-    margin: 0;
+    display: block;
+    width: 569px;
+    border: none;
+    height: 40px;
+    padding-top: 26px;
+    padding-bottom: 26px;
+    font-size: 20px;
+    line-height: 0px;
+    margin-left: 0;
+    margin-right: 17px;
+  }
+
+  .form__container-small {
+    margin-bottom: 16px;
   }
 }
