--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -129,6 +129,10 @@
     margin-bottom: 116px;
   }
 
+  .page-header--form {
+    margin-bottom: 78px;
+  }
+
 
   .page_header__wrapper {
     display: block;
