--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -5,8 +5,7 @@
 .page-main__wrapper {
   font-family: @oswald;
   color: @basic-black;
-  padding-top: 27px;
-  padding-bottom: 39px;
+  margin-bottom: 40px;
 }
 
 .page-main__title-catalog {
@@ -25,6 +24,10 @@
   font-size: 36px;
   line-height: 36px;
   color: @special-black;
+  font-weight: 400;
+  margin: 0;
+  padding-top: 27px;
+  margin-bottom: 37px;
 }
 
 .page-main__text {
@@ -45,6 +48,22 @@
     margin-bottom: 45px;
   }
 
+  .page-main__title {
+    font-size: 60px;
+    line-height: 60px;
+    padding-top: 0;
+    margin-left: 40px;
+    margin-bottom: 55px;
+  }
+
+  .page-main__text {
+    font-size: 20px;
+    line-height: 30px;
+    width: 325px;
+    margin-bottom: 65px;
+    margin-left: 40px;
+  }
+
   .page-main__example {
     background-color: @basic-white;
   }
@@ -54,10 +73,6 @@
     width: 708px;
     padding: 0 30px;
     margin: 0 auto;
-  }
-
-  .page-main__text {
-    width: 320px;
   }
 
   .page-main__title-catalog {
@@ -102,10 +117,17 @@
     margin: 0 auto;
     width: 1220px;
     padding: 0 110px;
+    margin-bottom: 67px;
+  }
+
+  .page-main__title {
+    margin: 0;
+    margin-bottom: 55px;
   }
 
   .page-main__text {
-    width: 320px;
+    width: 330px;
+    margin: 0;
   }
 
   .catalog-additional-goods__catalog-wrapper {
