--- a/source/less/blocks/site-menu.less
+++ b/source/less/blocks/site-menu.less
@@ -30,7 +30,7 @@
       content: "";
       display: block;
       position: absolute;
-      width: 63px;
+      width: 100%;
       height: 3px;
       left: 1px;
       top: 30px;
@@ -71,7 +71,7 @@
   }
 
   .site-menu__link--color {
-    color: @basic-black;
+    color: @special-black;
   }
 
   .site-menu__item--active {
@@ -86,6 +86,21 @@
       left: 0;
       top: 35px;
       background-color: @basic-white;
+    }
+  }
+
+  .site-menu__item--active-green {
+    position: relative;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      left: 0;
+      top: 35px;
+      background-color: @basic_green;
     }
   }
 }
