--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -56,7 +56,6 @@
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 13px;
-  padding-right: 20px;
   border: solid 1px @input-border-grey;
 }
 
@@ -171,7 +170,7 @@
   position: relative;
 }
 
-.form__input-email {
+.form__icon-email {
   position: absolute;
   display: block;
   right: 15px;
@@ -182,7 +181,7 @@
   position: relative;
 }
 
-.form__input-tel {
+.form__icon-tel {
   position: absolute;
   display: block;
   right: 13px;
@@ -366,7 +365,6 @@
     padding-top: 14px;
     padding-bottom: 14px;
     padding-left: 20px;
-    padding-right: 20px;
   }
 
   .form__group--radio {
@@ -465,7 +463,7 @@
     position: relative;
   }
 
-  .form__input-email {
+  .form__icon-email {
     position: absolute;
     display: block;
     right: 18px;
@@ -476,7 +474,7 @@
     position: relative;
   }
 
-  .form__input-tel {
+  .form__icon-tel {
     position: absolute;
     display: block;
     right: 17px;
